public/css/homepage/main.css
/* ... */
#time_open-filter::-webkit-input-placeholder {
  color: #333; }

#time_open-filter::-moz-placeholder {
  color: #333; }

#search-keyword::-webkit-input-placeholder {
  color: #333; }

#search-keyword::-moz-placeholder {
  color: #333; }

#search-keyword {
  font-size: 13px;
  padding: 14px 20px;
  vertical-align: middle;
  color: #111111 !important; }

.filterwrap .btn-black {
  color: #fff;
  border-top-left-radius: 0;
  border-top-right-radius: 4px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 4px;
  width: 100%; }

.btn-orange {
  background-color: #fd874d !important; }

.btn-black {
  background-color: #142f3a !important; }

.btn-orange:hover {
  background-color: #ffa162;
  color: #fff; }

/* eo filters */
@media only screen and (max-width: 1200px) {
  ul.nav {
    padding-left: 20px;
    padding-right: 20px;
    font-size: 12px;
    font-weight: 600;  }
}
/* Medium Devices, Desktops */
@media only screen and (max-width: 992px) {
  #phone > .row > .col-sm-12 {
    text-align: center; }

  #phone {
    background: none;
    padding-top: 60px; }
    #phone p {
      font-size: 30px; }

  body {
    background: #fefefe url("../../images/homepage/landing/bg-top-sm.jpg") top right no-repeat; }
  #banner {
    height: 700px; }

  #phone .visible-sm {
    margin-top: 40px; }

  /* specific screen nav toggle */
  .navbar-header {
    float: none; }

  .navbar-header {
    float: none; }

  .navbar-left, .navbar-right {
    float: none !important; }

  .navbar-toggle {
    display: block; }

  .navbar-collapse {
    border-top: 1px solid transparent;
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); }

  .navbar-fixed-top {
    top: 0;
    border-width: 0 0 1px; }

  .navbar-collapse.collapse {
    display: none !important; }

  .navbar-nav {
    float: none !important;
    margin-top: 7.5px; }

  .navbar-nav > li {
    float: none; }

  .navbar-nav > li > a {
    padding-top: 10px;
    padding-bottom: 10px; }

  .collapse.in {
    display: block !important; }

  /*  */
  .navbar-right {
    margin-right: 0px; }

  ul.nav {
    margin-top: 20px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    -ms-border-radius: 5px;
    border-radius: 5px; }

  #navbar {
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none; }

  #find-a-business img {
    width: 200px; }

  #banner .btn {
    font-size: 20px; }
    #banner .btn img {
      height: 21px; }

  #featherq-works img,
  #wait img {
    width: 100%; } }
/* Small Devices, Tablets */
@media only screen and (max-width: 768px) {
  .navbar-right {
    margin-right: -15px; }
  #find-a-business img {
    width: 155px; }

  section {
    padding: 50px 0 70px; }

  .tri {
    margin-top: -50px; }

  #banner .btn {
    font-size: 20px; } }
/* Extra Small Devices, Phones */
/* Custom, iPhone Retina */
/*ARA search dropdown*/
#search-suggest{
  display: block;
}

